apps/staging/code-server/httpRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: code-server
  namespace: default
spec:
  parentRefs:
    - name: code-server
      namespace: default
  hostnames:
    - code.staging.myrobertson.net
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: code-server
          port: 8080
