apps/staging/code-server/auth-policy.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: auth-policy-code-server
  namespace: default
spec:
  targetRefs:
    - kind: Gateway
      group: gateway.networking.k8s.io
      name: myrobertson-com-gateway
  action: CUSTOM
  provider:
    name: authelia
  rules:
    - to:
        - operation:
            hosts:
              - code.staging.myrobertson.net
